--- a/package.json
+++ b/package.json
@@ -1,11 +1,55 @@
 {
   "private": true,
-  "repository": "hplushlab/hplu.sh",
+  "scripts": {
+    "start": "parcel serve src/index.pug --open"
+  },
   "license": "MIT",
+  "repository": "hplushlab/hplu.sh",
+  "dependencies": {
+    "parcel-bundler": "^1.12.4",
+    "pug": "^2.0.4",
+    "sugarss": "^2.0.0"
+  },
+  "browserslist": [
+    "last 2 versions",
+    "firefox esr",
+    "not dead",
+    "not ie 11",
+    "not ie_mob 11",
+    "not op_mini all",
+    "not op_mob > 0",
+    "not and_qq > 0",
+    "not android > 0"
+  ],
   "devDependencies": {
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
+    "stylelint": "^12.0.1",
+    "stylelint-config-recess-order": "^2.0.3",
+    "stylelint-config-standard": "^19.0.0",
+    "stylelint-order": "^3.1.1",
     "svgo": "^1.3.2"
+  },
+  "stylelint": {
+    "extends": [
+      "stylelint-config-standard",
+      "stylelint-config-recess-order"
+    ],
+    "rules": {
+      "declaration-block-trailing-semicolon": null,
+      "block-closing-brace-newline-before": null,
+      "block-opening-brace-space-before": null,
+      "at-rule-no-unknown": [
+        true,
+        {
+          "ignoreAtRules": [
+            "define-mixin",
+            "mixin"
+          ]
+        }
+      ],
+      "color-named": "never"
+    }
   },
   "husky": {
     "hooks": {
@@ -15,6 +59,10 @@
   "lint-staged": {
     "*.svg": [
       "svgo",
+      "git add"
+    ],
+    "*.sss": [
+      "stylelint --fix",
       "git add"
     ]
   }
