--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "license": "MIT",
   "repository": "hplush/hplu.sh",
   "dependencies": {
+    "autoprefixer": "^9.7.3",
     "parcel-bundler": "^1.12.4",
+    "postcss-hexrgba": "^2.0.0",
+    "postcss-nested": "^4.2.1",
     "pug": "^2.0.4",
     "sugarss": "^2.0.0"
   },
@@ -22,6 +25,7 @@
     "not android > 0"
   ],
   "devDependencies": {
+    "@logux/stylelint-config": "^0.1.0",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
     "stylelint": "^12.0.1",
@@ -30,26 +34,15 @@
     "stylelint-order": "^3.1.1",
     "svgo": "^1.3.2"
   },
-  "stylelint": {
-    "extends": [
-      "stylelint-config-standard",
-      "stylelint-config-recess-order"
-    ],
-    "rules": {
-      "declaration-block-trailing-semicolon": null,
-      "block-closing-brace-newline-before": null,
-      "block-opening-brace-space-before": null,
-      "at-rule-no-unknown": [
-        true,
-        {
-          "ignoreAtRules": [
-            "define-mixin",
-            "mixin"
-          ]
-        }
-      ],
-      "color-named": "never"
+  "postcss": {
+    "plugins": {
+      "postcss-nested": {},
+      "postcss-hexrgba": {},
+      "autoprefixer": {}
     }
+  },
+  "stylelint": {
+    "extends": "@logux/stylelint-config"
   },
   "husky": {
     "hooks": {
