--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "private": true,
   "scripts": {
-    "lint": "stylelint src/**/*.sss",
+    "clean": "del-cli dist/ .cache",
+    "lint": "eslint . && stylelint src/**/*.sss",
+    "build": "NODE_ENV=production ./scripts/build.js",
     "start": "parcel serve src/index.pug --open",
-    "test": "yarn lint"
+    "test": "yarn lint && yarn build"
   },
   "license": "MIT",
   "repository": "hplush/hplu.sh",
+  "type": "module",
+  "engines": {
+    "node": ">=13.2.0"
+  },
   "dependencies": {
     "autoprefixer": "^9.7.3",
     "parcel-bundler": "^1.12.4",
+    "postcss-combine-media-query": "^1.0.0",
     "postcss-hexrgba": "^2.0.0",
     "postcss-nested": "^4.2.1",
     "pug": "^2.0.4",
@@ -27,7 +34,19 @@
     "not android > 0"
   ],
   "devDependencies": {
+    "@logux/eslint-config": "^35.0.3",
     "@logux/stylelint-config": "^0.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-es5": "^1.4.1",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-jest": "^23.2.0",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-prefer-let": "^1.0.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-unicorn": "^15.0.1",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
     "stylelint": "^12.0.1",
@@ -43,6 +62,14 @@
       "autoprefixer": {}
     }
   },
+  "eslintConfig": {
+    "extends": "@logux/eslint-config/node"
+  },
+  "eslintIgnore": [
+    "scripts/lib/dirs.js",
+    "dist",
+    ".cache"
+  ],
   "stylelint": {
     "extends": "@logux/stylelint-config"
   },
