--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "private": true,
   "scripts": {
     "clean": "del-cli dist/ .cache",
+    "spell": "yaspeller *.md dist/**/*.html",
     "lint": "eslint . && stylelint src/**/*.sss",
     "build": "NODE_ENV=production ./scripts/build.js",
     "start": "parcel serve src/index.pug --open",
-    "test": "yarn lint && yarn build && size-limit"
+    "test": "yarn lint && yarn build && size-limit && yarn spell"
   },
   "license": "MIT",
   "repository": "hplush/hplu.sh",
@@ -54,7 +55,8 @@
     "stylelint-config-recess-order": "^2.0.3",
     "stylelint-config-standard": "^19.0.0",
     "stylelint-order": "^3.1.1",
-    "svgo": "^1.3.2"
+    "svgo": "^1.3.2",
+    "yaspeller": "^6.0.2"
   },
   "postcss": {
     "plugins": {
@@ -98,5 +100,15 @@
       ],
       "limit": "41 KB"
     }
-  ]
+  ],
+  "yaspeller": {
+    "ignoreCapitalization": true,
+    "dictionary": [
+      "github",
+      "hplush",
+      "hplushlab",
+      "ru",
+      "sitnik"
+    ]
+  }
 }
