--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,8 @@ jobs:
           fetch-depth: 1
       - name: Install Node.js
         uses: actions/setup-node@v1
+        with:
+          node-version: '>=13.2'
       - name: Get Yarn cache
         id: yarn-cache
         run: echo "::set-output name=dir::$(yarn cache dir)"
