--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "parcel-bundler": "^1.12.4",
     "postcss-combine-media-query": "^1.0.0",
     "postcss-hexrgba": "^2.0.0",
+    "postcss-media-minmax": "^4.0.0",
     "postcss-nested": "^4.2.1",
+    "postcss-pxtorem": "^4.0.1",
     "pug": "^2.0.4",
     "sugarss": "^2.0.0"
   },
@@ -64,6 +66,16 @@
     "plugins": {
       "postcss-nested": {},
       "postcss-hexrgba": {},
+      "postcss-pxtorem": {
+        "propList": [
+          "*"
+        ],
+        "selectorBlackList": [
+          "html"
+        ],
+        "rootValue": 18
+      },
+      "postcss-media-minmax": {},
       "autoprefixer": {}
     }
   },
