--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,5 +31,21 @@ jobs:
         run: yarn install --production
       - name: Build static files
         run: yarn build
-      - name: Build image
-        run: docker build  -f ./scripts/deploy/Dockerfile -t hplush .
+        env:
+          CI: 1
+          FORCE_COLOR: 2
+          GITTER_TOKEN: ${{ secrets.GITTER_TOKEN }}
+          GITTER_ROOM_ID: ${{ secrets.GITTER_ROOM_ID }}
+      - name: Install Google Cloud
+        uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+        with:
+          version: '274.0.1'
+          service_account_key: ${{ secrets.GCLOUD_AUTH }}
+      - name: Deploy files
+        run: yarn run ssdeploy deploy
+        env:
+          FORCE_COLOR: 2
+          GCLOUD_APP: ${{ secrets.GCLOUD_APP }}
+          GCLOUD_PROJECT: ${{ secrets.GCLOUD_PROJECT }}
+          CLOUDFLARE_ZONE: ${{ secrets.CLOUDFLARE_ZONE }}
+          CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
