--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,6 @@ jobs:
       - name: Build static files
         run: yarn build
         env:
-          CI: 1
           FORCE_COLOR: 2
           GITTER_TOKEN: ${{ secrets.GITTER_TOKEN }}
           GITTER_ROOM_ID: ${{ secrets.GITTER_ROOM_ID }}
@@ -42,7 +41,7 @@ jobs:
           version: '274.0.1'
           service_account_key: ${{ secrets.GCLOUD_AUTH }}
       - name: Deploy files
-        run: yarn run ssdeploy deploy
+        run: yarn run ssdeploy deploy --verbose
         env:
           FORCE_COLOR: 2
           GCLOUD_APP: ${{ secrets.GCLOUD_APP }}
