--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
 add_header X-Content-Type-Options "nosniff";
-add_header Content-Security-Policy "object-src 'none'; frame-ancestors 'none'; form-action 'none'; base-uri 'none'; style-src 'sha256-TtFLAEQoxzqVukX3s67KWbGJHf+khOpmgqWnloG/MoA=' 'self'; script-src 'self'";
+add_header Content-Security-Policy "default-src 'none'; frame-ancestors 'none'; form-action 'none'; base-uri 'none'; img-src 'self'; font-src 'self'; style-src 'sha256-TtFLAEQoxzqVukX3s67KWbGJHf+khOpmgqWnloG/MoA=' 'self'; script-src 'self'";
 
 if ($host ~ ^www\.(?<domain>.+)$) {
   return 301 https://$domain$request_uri;
