Add spelling check for Markdown to pre-commit hook

--- a/package.json
+++ b/package.json
@@ -103,7 +103,8 @@
     "*.sss": [
       "stylelint --fix",
       "git add"
-    ]
+    ],
+    "*.md": "yaspeller"
   },
   "size-limit": [
     {
