Fix spelling check

--- a/package.json
+++ b/package.json
@@ -122,8 +122,7 @@
       "github",
       "hplush",
       "hplushlab",
-      "ru",
-      "sitnik",
+      "hi@hplu.sh",
       "UI",
       "i18n",
       "a11y",
