--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '>=13.2'
-      - name: Get Yarn cache
+      - name: Get Yarn cache path
         id: yarn-cache
         run: echo "::set-output name=dir::$(yarn cache dir)"
       - name: Cache Yarn
@@ -25,23 +25,28 @@ jobs:
         with:
           path: ${{ steps.yarn-cache.outputs.dir }}
           key: yarn-production-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            yarn-production-
+          restore-keys: yarn-production-
       - name: Install build dependencies
         run: yarn install --production
       - name: Build static files
         run: yarn build
         env:
           FORCE_COLOR: 2
-          GITTER_TOKEN: ${{ secrets.GITTER_TOKEN }}
-          GITTER_ROOM_ID: ${{ secrets.GITTER_ROOM_ID }}
+      - name: Check files changes
+        id: hash
+        run: npx ssdeploy changed
+        env:
+          FORCE_COLOR: 2
+          WEBSITE_URL: ${{ secrets.WEBSITE_URL }}
       - name: Install Google Cloud
+        if: "!steps.hash.outputs.noChanges"
         uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
         with:
           version: '274.0.1'
           service_account_key: ${{ secrets.GCLOUD_AUTH }}
       - name: Deploy files
-        run: yarn run ssdeploy deploy
+        if: "!steps.hash.outputs.noChanges"
+        run: npx ssdeploy deploy --verbose
         env:
           FORCE_COLOR: 2
           GCLOUD_APP: ${{ secrets.GCLOUD_APP }}
