Remove git add from ss lint-staged

--- a/package.json
+++ b/package.json
@@ -100,10 +100,7 @@
       "svgo",
       "git add"
     ],
-    "*.sss": [
-      "stylelint --fix",
-      "git add"
-    ],
+    "*.sss": "stylelint --fix",
     "*.md": "yaspeller"
   },
   "size-limit": [
