Update lint-staged config

--- a/package.json
+++ b/package.json
@@ -96,10 +96,7 @@
     }
   },
   "lint-staged": {
-    "*.svg": [
-      "svgo",
-      "git add"
-    ],
+    "*.svg": "svgo",
     "*.sss": "stylelint --fix",
     "*.md": "yaspeller"
   },
