--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
   },
   "dependencies": {
     "autoprefixer": "^9.7.4",
-    "del": "^5.1.0",
+    "del": "^6.0.0",
     "parcel-bundler": "^1.12.4",
-    "postcss-combine-media-query": "^1.0.0",
-    "postcss-hexrgba": "^2.0.0",
+    "postcss-combine-media-query": "^1.0.1",
+    "postcss-hexrgba": "^2.0.1",
     "postcss-media-minmax": "^4.0.0",
     "postcss-nested": "^4.2.1",
     "postcss-pxtorem": "^4.0.1",
-    "pug": "^2.0.4",
-    "ssdeploy": "^0.6.10",
+    "pug": "^3.0.0",
+    "ssdeploy": "^0.6.17",
     "sugarss": "^2.0.0"
   },
   "browserslist": [
@@ -39,28 +39,30 @@
     "not android > 0"
   ],
   "devDependencies": {
-    "@logux/eslint-config": "^35.0.3",
-    "@logux/stylelint-config": "^0.1.2",
-    "@size-limit/file": "^3.0.0",
-    "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-es5": "^1.4.1",
-    "eslint-plugin-import": "^2.20.0",
-    "eslint-plugin-jest": "^23.6.0",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-prefer-let": "^1.0.1",
+    "@logux/eslint-config": "^40.0.5",
+    "@logux/stylelint-config": "^0.1.3",
+    "@size-limit/file": "^4.6.0",
+    "eslint": "^7.10.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-es5": "^1.5.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.0.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prefer-let": "^1.1.0",
+    "eslint-plugin-prettierx": "^0.14.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-unicorn": "^15.0.1",
-    "husky": "^4.2.0",
-    "lint-staged": "^10.0.2",
-    "stylelint": "^13.0.0",
-    "stylelint-config-recess-order": "^2.0.3",
-    "stylelint-config-standard": "^19.0.0",
-    "stylelint-order": "^4.0.0",
+    "eslint-plugin-unicorn": "^22.0.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.0",
+    "size-limit": "^4.6.0",
+    "stylelint": "^13.7.2",
+    "stylelint-config-recess-order": "^2.1.0",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-order": "^4.1.0",
     "svgo": "^1.3.2",
-    "yaspeller": "^6.0.2"
+    "yaspeller": "^7.0.0"
   },
   "postcss": {
     "plugins": {
@@ -80,7 +82,7 @@
     }
   },
   "eslintConfig": {
-    "extends": "@logux/eslint-config/node"
+    "extends": "@logux/eslint-config"
   },
   "eslintIgnore": [
     "scripts/lib/dirs.js",
