--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
     "node": ">=14.0.0"
   },
   "dependencies": {
-    "autoprefixer": "^9.7.4",
+    "autoprefixer": "^10.0.1",
     "del": "^6.0.0",
-    "parcel-bundler": "^1.12.4",
-    "postcss-combine-media-query": "^1.0.1",
+    "parcel": "^2.0.0-nightly.420",
+    "postcss": "^8.1.1",
     "postcss-hexrgba": "^2.0.1",
     "postcss-media-minmax": "^4.0.0",
-    "postcss-nested": "^4.2.1",
-    "postcss-pxtorem": "^4.0.1",
+    "postcss-nested": "^5.0.1",
+    "postcss-pxtorem": "^5.1.1",
     "pug": "^3.0.0",
     "ssdeploy": "^0.6.17",
-    "sugarss": "^2.0.0"
+    "sugarss": "^3.0.1"
   },
   "browserslist": [
     "last 2 versions",
@@ -42,6 +42,7 @@
     "@logux/eslint-config": "^40.0.5",
     "@logux/stylelint-config": "^0.1.3",
     "@size-limit/file": "^4.6.0",
+    "del-cli": "^3.0.1",
     "eslint": "^7.10.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-es5": "^1.5.0",
