--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "autoprefixer": "^10.0.2",
     "del": "^6.0.0",
-    "parcel": "^2.0.0-nightly.420",
+    "parcel": "nightly",
     "postcss": "^8.1.10",
     "postcss-hexrgba": "^2.0.1",
     "postcss-media-minmax": "^4.0.0",
