--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
   "dependencies": {
     "autoprefixer": "^10.0.4",
     "del": "^6.0.0",
-    "parcel": "nightly",
+    "parcel": "^2.0.0-nightly.463",
     "postcss": "^8.1.10",
     "postcss-hexrgba": "^2.0.1",
     "postcss-media-minmax": "^4.0.0",
     "postcss-nested": "^5.0.1",
     "postcss-pxtorem": "^5.1.1",
     "pug": "^3.0.0",
-    "ssdeploy": "^0.6.17",
+    "ssdeploy": "^0.6.18",
     "sugarss": "^3.0.3"
   },
   "devDependencies": {
