--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,9 +15,9 @@ jobs:
       - name: Checkout the repository
         uses: actions/checkout@v2
       - name: Install Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
-          node-version: '>=14'
+          node-version: 16
       - name: Install build dependencies
         run: yarn install --production
       - name: Build static files
