--- a/package.json
+++ b/package.json
@@ -15,47 +15,46 @@
     "node": ">=14.0.0"
   },
   "dependencies": {
-    "@babel/core": "^7.14.0",
-    "@parcel/optimizer-cssnano": "^2.0.0-nightly.643",
-    "@parcel/optimizer-htmlnano": "^2.0.0-nightly.643",
-    "@parcel/packager-css": "^2.0.0-nightly.643",
-    "@parcel/packager-html": "^2.0.0-nightly.643",
-    "@parcel/transformer-css": "^2.0.0-nightly.643",
-    "@parcel/transformer-html": "^2.0.0-nightly.643",
-    "@parcel/transformer-postcss": "^2.0.0-nightly.643",
-    "@parcel/transformer-posthtml": "^2.0.0-nightly.643",
-    "@parcel/transformer-pug": "^2.0.0-nightly.643",
-    "@parcel/transformer-sugarss": "^2.0.0-nightly.643",
-    "autoprefixer": "^10.2.5",
-    "del": "^6.0.0",
-    "parcel": "^2.0.0-nightly.463",
-    "postcss": "^8.2.14",
+    "@babel/core": "^7.14.6",
+    "@parcel/optimizer-cssnano": "2.0.0-beta.2",
+    "@parcel/optimizer-htmlnano": "2.0.0-beta.2",
+    "@parcel/packager-css": "2.0.0-beta.2",
+    "@parcel/packager-html": "2.0.0-beta.2",
+    "@parcel/transformer-css": "2.0.0-beta.2",
+    "@parcel/transformer-html": "2.0.0-beta.2",
+    "@parcel/transformer-postcss": "2.0.0-beta.2",
+    "@parcel/transformer-posthtml": "2.0.0-beta.2",
+    "@parcel/transformer-pug": "2.0.0-beta.2",
+    "@parcel/transformer-sugarss": "2.0.0-beta.2",
+    "autoprefixer": "^10.2.6",
+    "parcel": "^2.0.0-beta.2",
+    "postcss": "^8.3.4",
     "postcss-hexrgba": "^2.0.1",
     "postcss-media-minmax": "^5.0.0",
     "postcss-nested": "^5.0.5",
     "postcss-pxtorem": "^6.0.0",
     "pug": "^3.0.2",
-    "ssdeploy": "^0.6.19",
-    "sugarss": "^3.0.3"
+    "ssdeploy": "^0.6.21",
+    "sugarss": "^4.0.1"
   },
   "devDependencies": {
-    "@logux/eslint-config": "^45.4.1",
+    "@logux/eslint-config": "^45.4.4",
     "@logux/stylelint-config": "^0.3.1",
-    "@size-limit/file": "^4.10.2",
-    "eslint": "^7.26.0",
-    "eslint-config-standard": "^16.0.2",
+    "@size-limit/file": "^4.12.0",
+    "eslint": "^7.28.0",
+    "eslint-config-standard": "^16.0.3",
     "eslint-plugin-es5": "^1.5.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prefer-let": "^1.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-unicorn": "^31.0.0",
+    "eslint-plugin-unicorn": "^33.0.1",
     "lint-staged": "^11.0.0",
-    "prettier": "^2.2.1",
+    "prettier": "^2.3.1",
     "simple-git-hooks": "^2.4.1",
-    "size-limit": "^4.10.2",
+    "size-limit": "^4.12.0",
     "stylelint": "^13.13.1",
     "svgo": "^2.3.0",
     "yaspeller": "^7.0.0"
