--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
 add_header X-Content-Type-Options "nosniff";
-add_header Content-Security-Policy "default-src 'none'; frame-ancestors 'none'; form-action 'none'; base-uri 'none'; img-src 'self'; font-src 'self'; style-src 'sha256-Uhm3T+cOuEk2k76yzFicoQKvNpWBFLxesqz1Zigczh4=' 'self'; script-src 'self'";
+add_header Content-Security-Policy "default-src 'none'; frame-ancestors 'none'; form-action 'none'; base-uri 'none'; img-src 'self'; font-src 'self'; style-src 'unsafe-inline' 'self'; script-src 'self'";
 
 if ($host ~ ^www\.(?<domain>.+)$) {
   return 301 https://$domain$request_uri;
@@ -11,10 +11,6 @@ if (-d $request_filename) {
 }
 
 add_header Cache-Control "public";
-
-location ~* "(\.css|\.png|\.svg|\.woff2)$" {
-  add_header Cache-Control "public, max-age=31536000, immutable";
-}
 
 location ~* "(\.png|\.ico|\.woff2)$" {
   add_header Content-Security-Policy "";
