--- a/package.json
+++ b/package.json
@@ -17,31 +17,17 @@
   "devDependencies": {
     "@size-limit/file": "^4.12.0",
     "lint-staged": "^11.0.0",
-    "prettier": "^2.3.1",
     "serve": "^12.0.0",
     "simple-git-hooks": "^2.4.1",
     "size-limit": "^4.12.0",
-    "svgo": "^2.3.0",
     "yaspeller": "^7.0.0"
   },
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged"
   },
   "lint-staged": {
-    "*.svg": "svgo",
-    "*.html": [
-      "prettier --write",
-      "yaspeller"
-    ],
+    "*.html": "yaspeller",
     "*.md": "yaspeller"
-  },
-  "prettier": {
-    "arrowParens": "avoid",
-    "jsxSingleQuote": false,
-    "quoteProps": "consistent",
-    "semi": false,
-    "singleQuote": true,
-    "trailingComma": "none"
   },
   "size-limit": [
     {
