--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "spell": "yaspeller *.md public/*.html",
-    "start": "serve public/",
+    "spell": "yaspeller *.md dist/*.html",
+    "start": "serve dist/",
     "test": "size-limit && yarn spell"
   },
   "license": "MIT",
@@ -16,25 +16,16 @@
   },
   "devDependencies": {
     "@size-limit/file": "^4.12.0",
-    "lint-staged": "^11.0.0",
     "serve": "^12.0.0",
-    "simple-git-hooks": "^2.4.1",
     "size-limit": "^4.12.0",
     "yaspeller": "^7.0.0"
-  },
-  "simple-git-hooks": {
-    "pre-commit": "npx lint-staged"
-  },
-  "lint-staged": {
-    "*.html": "yaspeller",
-    "*.md": "yaspeller"
   },
   "size-limit": [
     {
       "path": [
-        "public/index.html",
-        "public/*.woff2",
-        "public/logo.svg"
+        "dist/index.html",
+        "dist/*.woff2",
+        "dist/logo.svg"
       ],
       "limit": "43 KB"
     }
