--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,9 @@ jobs:
         with:
           node-version: 16
       - name: Install build dependencies
-        run: yarn install --production
+        uses: bahmutov/npm-install@v1
+        env:
+          NODE_ENV: production
       - name: Check files changes
         id: hash
         run: npx ssdeploy changed
