--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,7 @@
 name: Test
-
 on:
   push:
   pull_request:
-
-env:
-  FORCE_COLOR: 2
-
 jobs:
   build:
     name: Test
@@ -18,7 +13,10 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 16
+          cache: yarn
       - name: Install all dependencies
-        uses: bahmutov/npm-install@v1
+        run: yarn install --frozen-lockfile
       - name: Build and test
         run: yarn test
+        env:
+          FORCE_COLOR: 2
