--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "start": "serve dist/",
-    "test": "yaspeller *.md dist/*.html"
+    "start": "serve dist/"
   },
   "license": "MIT",
   "repository": "hplush/hplu.sh",
@@ -10,20 +9,6 @@
     "ssdeploy": "^0.7.2"
   },
   "devDependencies": {
-    "serve": "^12.0.1",
-    "yaspeller": "^7.2.0"
-  },
-  "yaspeller": {
-    "ignoreCapitalization": true,
-    "dictionary": [
-      "github",
-      "hplush",
-      "hplushlab",
-      "hi@hplu.sh",
-      "UI",
-      "i18n",
-      "a11y",
-      "monetization"
-    ]
+    "serve": "^12.0.1"
   }
 }
