--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,13 +9,17 @@ jobs:
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v2
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - name: Install Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 16
-          cache: yarn
+          node-version: 18
+          cache: pnpm
       - name: Install build dependencies
-        run: yarn install --frozen-lockfile --production
+        run: pnpm install --frozen-lockfile --production
       - name: Check files changes
         id: hash
         run: npx ssdeploy changed
