--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,10 +25,14 @@ jobs:
         run: npx ssdeploy changed
         env:
           WEBSITE_URL: ${{ secrets.WEBSITE_URL }}
-          FORCE_COLOR: 2
+      - name: Auth Google Cloud
+        if: "!steps.hash.outputs.noChanges"
+        uses: google-github-actions/auth@v0
+        with:
+          credentials_json: ${{ secrets.GCLOUD_AUTH }}
       - name: Install Google Cloud
         if: "!steps.hash.outputs.noChanges"
-        uses: google-github-actions/setup-gcloud@master
+        uses: google-github-actions/setup-gcloud@v0
         with:
           service_account_key: ${{ secrets.GCLOUD_AUTH }}
       - name: Deploy files
@@ -39,4 +43,3 @@ jobs:
           GCLOUD_PROJECT: ${{ secrets.GCLOUD_PROJECT }}
           CLOUDFLARE_ZONE: ${{ secrets.CLOUDFLARE_ZONE }}
           CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
-          FORCE_COLOR: 2
