Fix subpages support

--- a/nginx.conf
+++ b/nginx.conf
@@ -10,6 +10,10 @@ if (-d $request_filename) {
   rewrite [^/]$ https://$http_host$uri/ permanent;
 }
 
+location ~ ^/(?<page_name>.+)$ {
+  try_files /$page_name.html =404;
+}
+
 add_header Cache-Control "public";
 
 location ~* "(\.png|\.ico|\.woff2)$" {
