--- a/nginx.conf
+++ b/nginx.conf
@@ -10,12 +10,12 @@ if (-d $request_filename) {
   rewrite [^/]$ https://$http_host$uri/ permanent;
 }
 
-location ~ ^/(?<page_name>.+)$ {
-  try_files /$page_name.html =404;
-}
-
 add_header Cache-Control "public";
 
 location ~* "(\.png|\.ico|\.woff2)$" {
   add_header Content-Security-Policy "";
+}
+
+location ~ ^/principles$ {
+  try_files /principles.html =404;
 }
