--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,23 +6,29 @@ on:
 permissions:
   contents: read
   id-token: write
+env:
+  PROJECT_ID: hplushdev
+  REGION: europe-west1
 jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    name: Staging Deploy
-    runs-on: ubuntu-latest
-    env:
-      PROJECT_ID: hplushdev
-      REGION: europe-west1
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Download web assets from test step
-        uses: actions/download-artifact@v4
+      - name: Install pnpm
+        uses: pnpm/action-setup@v3
         with:
-          name: web-client-assets-${{ github.sha }}
-          path: web/
+          version: 9
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: pnpm
+      - name: Install build dependencies
+        run: pnpm install --production
+      - name: Compile Markdown
+        run: pnpm build
       - name: Auth Google Cloud
         uses: google-github-actions/auth@v2
         with:
