--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,28 +39,28 @@ jobs:
       - name: Auth Docker
         run: gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
       - name: Build Docker image
-        run: docker build -t ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/staging/staging:latest ./web
+        run: docker build -t ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/website/website:latest .
       - name: Push Docker image
-        run: docker push ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/staging/staging:latest
+        run: docker push ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/website/website:latest
       - name: Deploy to Cloud Run
         run: |
-          gcloud run deploy staging \
+          gcloud run deploy website \
             --project ${{ env.PROJECT_ID }} \
-            --image ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/staging/staging:latest \
+            --image ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/website/website:latest \
             --region ${{ env.REGION }} \
             --allow-unauthenticated \
             --service-account github-deploy@${{ env.PROJECT_ID }}.iam.gserviceaccount.com
       - name: Move traffic to new revision
         run: |
-          gcloud run services update-traffic staging \
+          gcloud run services update-traffic website \
             --project ${{ env.PROJECT_ID }} \
             --region ${{ env.REGION }} \
             --to-latest
       - name: Delete previous images
         run: |
-          untagged=$(gcloud artifacts docker images list $REGION-docker.pkg.dev/$PROJECT_ID/staging/staging --include-tags --format="get(version)" --filter="tags = ''")
+          untagged=$(gcloud artifacts docker images list $REGION-docker.pkg.dev/$PROJECT_ID/website/website --include-tags --format="get(version)" --filter="tags = ''")
           for digest in $untagged; do
-            image=$REGION-docker.pkg.dev/$PROJECT_ID/staging/staging@$digest
+            image=$REGION-docker.pkg.dev/$PROJECT_ID/website/website@$digest
             echo "Deleting unused image: $image"
             gcloud artifacts docker images delete $image --quiet
           done
