--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,5 @@
 worker_processes 1;
 pid /run/nginx.pid;
-daemon off;
 
 events {
   worker_connections 1024;
@@ -20,7 +19,7 @@ http {
   sendfile on;
 
   server {
-    listen $PORT;
+    listen 8000;
 
     root /var/www;
     charset UTF-8;
